# esp32-deskpet

./: CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  motor.c  motor.h  robot_state.c  robot_state.h  wifi_ws.c  wifi_ws.h
main/display/: draw.c  draw.h  robo_eyes.c  robo_eyes.h  robot_eyes.c  robot_eyes.h  ssd1306.c  ssd1306.h
main/net/: captive_dns.c  captive_dns.h  http_server.c  http_server.h  index.html  wifi_ap.c
