idf_component_register(
    SRCS
        "main.c"
        "display/ssd1306.c"
        "display/draw.c"
        "display/robo_eyes.c"
        "motor.c"
        "wifi_ws.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        esp_wifi
        esp_netif
        esp_http_server
        esp_event
        esp_timer
        nvs_flash
        lwip
)
